Tue Feb 27 18:46:29 UTC 2007  Jonathan Pollack  <pollack_j@ociweb.com>

        * bin/auto_run_tests.pl:

          Fixed to run .exe files specified in the .lst for perl to run.

Fri Feb 23 18:30:41 UTC 2007  Yan Dai  <dai_y@ociweb.com>

        * DCPS\transport\simpleTCP\SimpleTcpTransport.h:
        * DCPS\transport\simpleUnreliableDgram\SimpleUnreliableDgramTransport.h:
        * DCPS\transport\framework\TransportReceiveStrategy.h:
        * DCPS\transport\framework\DataLink.h:
        * DCPS\transport\framework\ThreadSynch.h:
        * DCPS\transport\framework\TransportImpl.h:
        * DCPS\transport\framework\TransportFactory.h:
        * DCPS\transport\framework\TransportInterface.h:
        * DCPS\transport\framework\TransportSendStrategy.h:

          Added comments to describer the ownership of transport components.

Thu Feb 22 14:10:25 UTC 2007  Jonathan Pollack  <pollack_j@ociweb.com>

        * MPC/config/dcpsexe_with_reliable_multicast.mpb:
        * bin/dcps_tests.lst:
        * dds/DCPS/transport/ReliableMulticast:
        * dds/DCPS/transport/ReliableMulticast/ReliableMulticast.h:
        * dds/DCPS/transport/ReliableMulticast/ReliableMulticast.inl:
        * dds/DCPS/transport/ReliableMulticast/ReliableMulticast.cpp:
        * dds/DCPS/transport/ReliableMulticast/ReliableMulticast.mpc:
        * dds/DCPS/transport/ReliableMulticast/ReliableMulticastDataLink.h:
        * dds/DCPS/transport/ReliableMulticast/ReliableMulticastDataLink.inl:
        * dds/DCPS/transport/ReliableMulticast/ReliableMulticastDataLink.cpp:
        * dds/DCPS/transport/ReliableMulticast/ReliableMulticastLoader.h:
        * dds/DCPS/transport/ReliableMulticast/ReliableMulticastLoader.inl:
        * dds/DCPS/transport/ReliableMulticast/ReliableMulticastLoader.cpp:
        * dds/DCPS/transport/ReliableMulticast/ReliableMulticastRcHandles.h:
        * dds/DCPS/transport/ReliableMulticast/ReliableMulticastThreadSynchResource.h: